Small update to prvent a scroll issue on safari

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -36,7 +36,7 @@ body,
 .dialog-off-canvas-main-canvas {
   display: flex;
   flex-direction: column;
-  overscroll-behavior-y: none;
+  overscroll-behavior-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 
